--- a/src/css/scte_manager.css
+++ b/src/css/scte_manager.css
@@ -5,6 +5,7 @@
     margin-top: 25px;
     display: block;
     width: 100%;
+    height: 250px;
 }
 
 .scte-label {
@@ -21,6 +22,7 @@
     font-size: 11px;
     color: #ffffff;
     position: relative;
+    height: 250px;
 }
 
 .scte-header {
@@ -51,7 +53,7 @@
 }
 
 .scte-list {
-    max-height: 150px;
+    max-height: 250px;
     overflow-y: auto;
 }
 
@@ -125,7 +127,8 @@
     padding-top: 6px;
     border-top: 1px dotted #666;
     font-size: 10px;
-    display: none; /* Hidden by default */
+    /* display: none;  */
+    /* Hidden by default */
 }
 
 .scte-detection.expanded .scte-detection-details {
