--- a/src/css/agent_metrics.css
+++ b/src/css/agent_metrics.css
@@ -35,13 +35,6 @@
     color: #ffffff;
 }
 
-/* 
-
-https://foxvideo-sports.akamaized.net/live/foxsports1-ue1/index.m3u8?ad_env=1&_fw_ae=nomvpd&_fw_did=85fe6c6c-1f37-68e4-c0f1-872d10abbda6&_fw_did_android_id=&_fw_did_google_advertising_id=&_fw_did_idfa=&_fw_is_lat=0&_fw_nielsen_app_id=P5CFA3B51-3361-481F-B75D-D119A71FF616&_fw_seg=&_fw_us_privacy=1YNN&_fw_vcid2=516429%3A85fe6c6c-1f37-68e4-c0f1-872d10abbda6&ad=fw_prod&ad.csid=fsapp%2Fwebdesktop%2Flive%2Ffs1&ad.flags=+slcb+sltp+qtcb+emcr+fbad+dtrd+vicb&ad.metr=7&ad.prof=516429%3Ayospace_foxsports_webdesktop_live&ad_env=1&ad_mode=JIT&bu=sports&caid=EP044429620282&cdn=ak&duration=31536000&is_lat=0&kuid=&mcl_region=ue1&thumbsray=0&traceid=watch-watch-cj%28Mo%25c9mz2B&yo.av=4&yo.eb.bp=profile-jit&yo.lpa=dur&yo.pdt=sync&yo.po=-3&yo.pst=true&yo.t.jt=1500&yo.t.pr=1500&yo.ug=11801&yo.vm=W3siREVTSVJFRF9EVVJBVElPTiI6ICIke0RFU0lSRURfRFVSQVRJT05fU0VDU30iLCAiUFJPR1JBTV9DQUlEIjogIiR7TUVUQURBVEEuQ0FJRH0ifV0K&hdnts=exp%3D1778990095~acl%3D%2F*~hmac%3Da7d8209d2bbbfb9211136240abf98014af8980831bf21edcc848b24a0ae7ee9d
-
-*/
-
-
 /* Task List Styling */
 .agent-metric-task-list {
     display: flex;
@@ -233,4 +226,74 @@ https://foxvideo-sports.akamaized.net/live/foxsports1-ue1/index.m3u8?ad_env=1&_f
     color: #ffffff;
     min-width: 50px;
     text-align: center;
+}
+
+/* TOGGLE Checkboxes */
+
+.agent-toggle-switch {
+  display: inline-flex;
+  align-items: center;
+  position: relative;
+  padding-left: 50px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  min-height: 24px;
+}
+
+.agent-toggle-switch input[type="checkbox"] {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.agent-toggle-switch .toggle-switch__track {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  height: 22px;
+  width: 40px;
+  background-color: #5a5a5a;
+  transition: background-color 0.25s ease;
+  border-radius: 11px;
+}
+
+.agent-toggle-switch .toggle-switch__knob {
+  content: "";
+  position: absolute;
+  left: 3px;
+  top: 3px;
+  width: 16px;
+  height: 16px;
+  display: block;
+  background-color: #fff;
+  border-radius: 50%;
+  transition: left 0.25s ease;
+}
+
+.agent-toggle-switch input[type="checkbox"]:checked ~ .toggle-switch__track {
+  background-color: #67914f;
+}
+
+.agent-toggle-switch input[type="checkbox"]:checked ~ .toggle-switch__track .toggle-switch__knob {
+  left: 21px;
+}
+
+.agent-toggle-switch:hover input[type="checkbox"] ~ .toggle-switch__track {
+  background-color: #6f6f6f;
+}
+
+.agent-toggle-switch:hover input[type="checkbox"]:checked ~ .toggle-switch__track {
+  background-color: #8bc569;
+}
+
+.agent-toggle-switch .toggle-switch__body-container {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
 }
